force-app/main/default/objects/UserLicenseAllocation__c/UserLicenseAllocation__c.object-meta.xml
<CustomObject>
    <label>User License Allocation</label>
    <nameField>
        <displayFormat>ULA-{0}</displayFormat>
        <label>User License Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User License Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>