force-app/main/default/objects/UserLicenseAllocation__c/fields/AllocatedLicensePool__c.field-meta.xml
<CustomField>
    <fullName>AllocatedLicensePool__c</fullName>
    <label>Allocated License Pool</label>
    <referenceTo>License_Pool__c</referenceTo>
    <relationshipLabel>User License Allocations</relationshipLabel>
    <relationshipName>User_License_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>