force-app/main/default/objects/UserLicenseAllocation__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>SalesforceLicense__c</referenceTo>
    <relationshipLabel>User License Allocations</relationshipLabel>
    <relationshipName>User_License_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>