force-app/main/default/objects/UserLicenseAllocation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User License Allocations</relationshipLabel>
    <relationshipName>User_License_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>