force-app/main/default/objects/UserLicenseAllocation__c/fields/UserLicenseAllocationKey__c.field-meta.xml
<CustomField>
    <fullName>UserLicenseAllocationKey__c</fullName>
    <externalId>true</externalId>
    <label>User License Allocation Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>